--- a/UserApp/MainPage.xaml
+++ b/UserApp/MainPage.xaml
@@ -4,36 +4,38 @@
              x:Class="UserApp.MainPage">
 
     <ScrollView>
+
         <VerticalStackLayout
-            Spacing="25"
-            Padding="30,0"
-            VerticalOptions="Center">
+            Margin="10"
+            Spacing="10">
+            <Frame BackgroundColor="Azure">
+                <HorizontalStackLayout
+                    Spacing="20">
+                    <VerticalStackLayout>
+                        <Frame WidthRequest="100"
+                           HeightRequest="100"
+                           Padding="0">
+                            <Image Source="https://files.combyne.com/f619fa51d7fdea6600908ad2767e927a_image.jpg"/>
+                        </Frame>
+                        <Label Text="@daria_flipova"/>
+                    </VerticalStackLayout>
+                    <VerticalStackLayout>
+                        <HorizontalStackLayout
+                            Spacing="5">
+                            <Label Text="Дарья"/>
+                            <Label Text="Флипова"/>
+                        </HorizontalStackLayout>
+                        <Label Text="dariaphlipova@gcoin.com"/>
+                        <Label Text="+375 (33) 9990022"/>
+                        <Button Text="Смотреть"
+                                FontSize="15"
+                                Padding="5"
+                                HeightRequest="30"/>
+                    </VerticalStackLayout>
+                    
+                </HorizontalStackLayout>
+            </Frame>
 
-            <Image
-                Source="dotnet_bot.png"
-                SemanticProperties.Description="Cute dot net bot waving hi to you!"
-                HeightRequest="200"
-                HorizontalOptions="Center" />
-
-            <Label
-                Text="Hello, World!"
-                SemanticProperties.HeadingLevel="Level1"
-                FontSize="32"
-                HorizontalOptions="Center" />
-
-            <Label
-                Text="Welcome to .NET Multi-platform App UI"
-                SemanticProperties.HeadingLevel="Level2"
-                SemanticProperties.Description="Welcome to dot net Multi platform App U I"
-                FontSize="18"
-                HorizontalOptions="Center" />
-
-            <Button
-                x:Name="CounterBtn"
-                Text="Click me"
-                SemanticProperties.Hint="Counts the number of times you click"
-                Clicked="OnCounterClicked"
-                HorizontalOptions="Center" />
 
         </VerticalStackLayout>
     </ScrollView>
