--- a/UserApp/View/MainPage.xaml
+++ b/UserApp/View/MainPage.xaml
@@ -1,15 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="UserApp.MainPage"
-             xmlns:local="clr-namespace:UserApp.Model">
-
+             xmlns:userGrpcClassLib ="clr-namespace:UserGrpcClassLib;assembly=UserGrpcClassLib"
+             x:Class="UserApp.MainPage">
+    <!--xmlns:local="clr-namespace:UserRandom"-->
     <ScrollView>
 
         <VerticalStackLayout
             Margin="10"
             Spacing="10">
-            <Frame BackgroundColor="Azure">
+            <!--<Frame BackgroundColor="Azure">
                 <HorizontalStackLayout
                     Spacing="20">
                     <VerticalStackLayout>
@@ -35,21 +35,20 @@
                     </VerticalStackLayout>
 
                 </HorizontalStackLayout>
-            </Frame>
-
-            <CollectionView x:Name="collectionViewUser">
+            </Frame>-->
+            <Button Text="Заполнить список" Clicked="Button_Clicked"/>
+                <CollectionView x:Name="collectionViewUser">
                 <CollectionView.ItemsSource>
-                    <x:List Type="{x:Type local:User}">
-                    </x:List>
+                    <x:Array Type="{x:Type userGrpcClassLib:UserReply}">
+                    </x:Array>
                 </CollectionView.ItemsSource>
                 <CollectionView.ItemTemplate>
                     <DataTemplate>
-                        <Frame BackgroundColor="Azure">
+                        <Frame BackgroundColor="DarkViolet">
                             <HorizontalStackLayout Spacing="20">
                                 <VerticalStackLayout>
-                                    <Frame WidthRequest="100" HeightRequest="100" Padding="0">
-                                        <Image Source="{Binding AvatarUrl}"/>
-                                    </Frame>
+                                    
+                                    <Image WidthRequest="100" HeightRequest="100" Source="{Binding AvatarUrl}}"/>
                                     <Label Text="{Binding UserName}"/>
                                 </VerticalStackLayout>
                                 <VerticalStackLayout>
