--- a/UserApp/View/MainPage.xaml
+++ b/UserApp/View/MainPage.xaml
@@ -3,41 +3,10 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:userGrpcClassLib ="clr-namespace:UserGrpcClassLib;assembly=UserGrpcClassLib"
              x:Class="UserApp.MainPage">
-    <!--xmlns:local="clr-namespace:UserRandom"-->
     <ScrollView>
-
-        <VerticalStackLayout
-            Margin="10"
-            Spacing="10">
-            <!--<Frame BackgroundColor="Azure">
-                <HorizontalStackLayout
-                    Spacing="20">
-                    <VerticalStackLayout>
-                        <Frame WidthRequest="100"
-                           HeightRequest="100"
-                           Padding="0">
-                            <Image Source="https://files.combyne.com/f619fa51d7fdea6600908ad2767e927a_image.jpg"/>
-                        </Frame>
-                        <Label Text="@daria_flipova"/>
-                    </VerticalStackLayout>
-                    <VerticalStackLayout>
-                        <HorizontalStackLayout
-                            Spacing="5">
-                            <Label Text="Дарья"/>
-                            <Label Text="Флипова"/>
-                        </HorizontalStackLayout>
-                        <Label Text="dariaphlipova@gcoin.com"/>
-                        <Label Text="+375 (33) 9990022"/>
-                        <Button Text="Смотреть"
-                                FontSize="15"
-                                Padding="5"
-                                HeightRequest="30"/>
-                    </VerticalStackLayout>
-
-                </HorizontalStackLayout>
-            </Frame>-->
-            <Button Text="Заполнить список" Clicked="Button_Clicked"/>
-                <CollectionView x:Name="collectionViewUser">
+        <VerticalStackLayout>
+            <Button Text="Заполнить список" Clicked="Button_Clicked" WidthRequest="500"/>
+            <CollectionView x:Name="collectionViewUser">
                 <CollectionView.ItemsSource>
                     <x:Array Type="{x:Type userGrpcClassLib:UserReply}">
                     </x:Array>
@@ -45,28 +14,32 @@
                 <CollectionView.ItemTemplate>
                     <DataTemplate>
                         <Frame BackgroundColor="DarkViolet">
-                            <HorizontalStackLayout Spacing="20">
-                                <VerticalStackLayout>
-                                    
-                                    <Image WidthRequest="100" HeightRequest="100" Source="{Binding AvatarUrl}}"/>
+                            <Grid HeightRequest="150" >
+                                <Grid.ColumnDefinitions >
+                                    <ColumnDefinition Width="*"/>
+                                    <ColumnDefinition Width="*"/>
+                                </Grid.ColumnDefinitions>
+                                <VerticalStackLayout Grid.Column="0">
+                                    <Frame HorizontalOptions="Start" CornerRadius="30" Padding="0">
+                                        <Image Source="{Binding AvatarUrl}" HeightRequest="150" WidthRequest="150"/>
+                                    </Frame>
                                     <Label Text="{Binding UserName}"/>
                                 </VerticalStackLayout>
-                                <VerticalStackLayout>
-                                    <HorizontalStackLayout Spacing="5">
+                                <VerticalStackLayout HorizontalOptions="End" Grid.Column="1">
+                                    <HorizontalStackLayout Spacing="5" HorizontalOptions="End">
                                         <Label Text="{Binding Name}"/>
                                         <Label Text="{Binding Surname}"/>
                                     </HorizontalStackLayout>
-                                    <Label Text="{Binding Email}"/>
-                                    <Label Text="{Binding Phone}"/>
-                                    <Button Text="Смотреть" FontSize="15" Padding="5" HeightRequest="30"/>
+                                    <Label Text="{Binding Email}" HorizontalOptions="End"/>
+                                    <Label Text="{Binding Phone}" HorizontalOptions="End"/>
+                                    <Button Text="Смотреть" HorizontalOptions="End" FontSize="15" Padding="5" HeightRequest="30" WidthRequest="200"/>
                                 </VerticalStackLayout>
-
-                            </HorizontalStackLayout>
+                            </Grid>
                         </Frame>
                     </DataTemplate>
                 </CollectionView.ItemTemplate>
             </CollectionView>
-
+            
         </VerticalStackLayout>
     </ScrollView>
 
